[tool.poetry]
name = "operationsaccounts"
version = "0.1.0"
description = "Операции по счетам (Operations on accounts). Курсовой проект 3."
authors = ["Mike Kushner <mike760807@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
